# luasystem

./: .gitignore  CMakeLists.txt  Makefile  README.md  lua.sln
.github/workflows/: pragma-generic-ci.yml
include/: luadefinitions.h  luainterface.hpp  luasystem.h  luasystem_file.h
lua/: lua.vcxproj  lua.vcxproj.filters
src/: impl_luajit_definitions.hpp  lua_compile.cpp  lua_headers.hpp  luadefinitions.hpp  luainterface.cpp  luasystem.cpp  snapshot.cpp
src/implementation/: compile.cpp  core.cpp  interface.cpp  snapshot.cpp
src/interface/: core.cppm  interface.cppm  luasystem.cppm  util.cppm
